examples/test/testpolicy12089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12089
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key18: value32
      key16: value26
      key8: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value25
          key47: value31
          key20: value25
      podSelector:
        matchLabels:
          key40: value9
          key33: value31
          key4: value29
